# shikisai

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: color_output.rs
src/: lib.rs
tests/: test_color.rs
